[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/player.gd" type="Script" id=1]
[ext_resource path="res://JoyCons/JoyCon.tscn" type="PackedScene" id=2]

[sub_resource type="SphereMesh" id=1]
radius = 0.3
height = 0.6

[node name="Player" type="Spatial"]
script = ExtResource( 1 )

[node name="JoyCon" parent="." instance=ExtResource( 2 )]

[node name="Cube" type="MeshInstance" parent="."]
layers = 129
mesh = SubResource( 1 )
material/0 = null

[node name="Tween" type="Tween" parent="."]

[node name="MotionControlTimeout" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="button_pressed" from="JoyCon" to="." method="_on_joycon_button_pressed"]
[connection signal="timeout" from="MotionControlTimeout" to="." method="_on_MotionControlTimeout"]
